--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-        <h1></h1>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lassagna</a>
+        <img src="images/lassagna.webp">
+
     </body>
 
 </html>
