Add Description, Ingredients and Steps headings

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/lasagna.html">Lassagna</a>
         <img src="images/lassagna.webp">
+        <h2>Descreption</h2>
+        <h3>The best lassagna recipe in the world. Simply amazing. Lassagna sheets dipped in a special marinara sauce that you can make at home</h3>
+        <h2>Ingedients</h2>
+        <ul>
+            
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+
+        </ol> 
+
 
     </body>
 
