--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <h3>The best lassagna recipe in the world. Simply amazing. Lassagna sheets dipped in a special marinara sauce that you can make at home</h3>
         <h2>Ingedients</h2>
         <ul>
-            
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound lean ground beef</li>
+            <li>salt and pepper to taste</li>
+            <li>1 (16 ounce) jar spaghetti sauce</li>
+            <li>1 clove garlic, minced</li>
+            <li>½ pound shredded mozzarella cheese</li>
+            <li>½ pound shredded Cheddar cheese</li>
+            <li>1 pint ricotta cheese</li>
         </ul>
         <h3>Steps</h3>
         <ol>
