--- a/recipes/muffin.html
+++ b/recipes/muffin.html
@@ -11,6 +11,19 @@
         <img src="odin-recipes/images/muffin.webp" alt="picture of delicious muffin">
         <h2>Descreption</h2>
         <h3>The best muffin recipe in the world. Simply amazing. chocolate muffin that the whole family will enjoy</h3>
+        <h2>Ingedients</h2>
+        <ul>
+            <li>1 cup margarine, softened</li>
+            <li>12 cups white sugar</li>
+            <li>4 eggs</li>
+            <li>6 bananas, mashed/li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>3 cups all-purpose flour</li>
+            <li>¼ cup unsweetened cocoa powder</li>
+            <li>2 teaspoons baking soda</li>
+            <li>1 cup lite sour cream</li>
+            <li>1 cup semisweet chocolate chips</li>
+        </ul>
     </body>
 
 </html>
