--- a/recipes/muffin.html
+++ b/recipes/muffin.html
@@ -24,6 +24,12 @@
             <li>1 cup lite sour cream</li>
             <li>1 cup semisweet chocolate chips</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease two 9x5 inch loaf pans.</li>
+            <li>n a large bowl, cream together margarine, sugar and eggs. Stir in bananas and vanilla. Sift in flour, baking soda and cocoa; mix well. Blend in sour cream and chocolate chips. Pour batter into prepared pans.</li>
+            <li>Bake in preheated oven for 60 minutes, or until a toothpick inserted into center of a loaf comes out clean.</li>
+        </ol> 
     </body>
 
 </html>
