Add recipe for eggplanr

--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -12,6 +12,16 @@
         <h2>Descreption</h2>
         <h3>The best eggplant recipe in the world. Simply amazing. with melted marmesan and sauce. Baked in the oven until golden brown</h3>
         <h2>Ingedients</h2>
+        <ul>
+            <li>1 medium eggplant, halved lengthwise</li>
+            <li>4 tablespoons olive oil, divided</li>
+            <li>1 pinch kosher salt, divided</li>
+            <li>½ teaspoon ground black pepper, divided</li>
+            <li>1 cup marinara sauce</li>
+            <li>1 cup shredded mozzarella cheese</li>
+            <li>2 tablespoons grated Parmesan cheese</li>
+            <li>1 teaspoon chopped fresh basil</li>
+        </ul>
     </body>
 
 </html>
