--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -22,6 +22,14 @@
             <li>2 tablespoons grated Parmesan cheese</li>
             <li>1 teaspoon chopped fresh basil</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Score eggplant all the way through the flesh lengthwise, being careful not to cut through the skin. Score again widthwise to create cubes. Gently turn the eggplant inside out. Repeat with second half. If eggplant breaks, manipulate the outer edges to stand up or use a long skewer to hold it open.</li>
+            <li>Drizzle both halves with 2 tablespoons oil, 1/2 teaspoon salt, and 1/4 teaspoon pepper. Place in an air fryer basket.</li>
+            <li>Air-fry at 390 to 400 degrees F for 10 minutes.</li>
+            <li>Open the air fryer and top each eggplant with marinara sauce, mozzarella cheese, and Parmesan cheese, trying to fill each groove. Air-fry 5 minutes longer.</li>
+            <li>Serve immediately sprinkled with fresh basil.</li>
+        </ol> 
     </body>
 
 </html>
