Add links for recipes to index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lassagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lassagna</a></li>
+            <li><a href="recipes/muffin.html">Muffin</a></li>
+            <li><a href="recipes/eggplant.html">Eggplant</a></li>
+        </ul>
+        
     </body>
 
 </html>
