--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Eggplant<h1>
-        <img src="images/eggplant.webp" alt="picture of delicious eggplant">
+        <img src="../eggplant.webp" alt="picture of delicious eggplant">
         <h2>Descreption</h2>
         <h3>The best eggplant recipe in the world. Simply amazing. with melted marmesan and sauce. Baked in the oven until golden brown</h3>
         <h2>Ingedients</h2>
