--- a/recipes/lassagna.html
+++ b/recipes/lassagna.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Lassagna<h1>
-        <img src="images/lassagna.webp" alt="picture of delicious lassagna">
+        <img src="../images/lassagna.webp" alt="picture of delicious lassagna">
         <h2>Descreption</h2>
         <h3>The best lassagna recipe in the world. Simply amazing. Lassagna sheets dipped in a special marinara sauce that you can make at home</h3>
         <h2>Ingedients</h2>
