--- a/recipes/muffin.html
+++ b/recipes/muffin.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Muffin<h1>
-        <img src="odin-recipes/images/muffin.webp" alt="picture of delicious muffin">
+        <img src="../images/muffin.webp" alt="picture of delicious muffin">
         <h2>Descreption</h2>
         <h3>The best muffin recipe in the world. Simply amazing. chocolate muffin that the whole family will enjoy</h3>
         <h2>Ingedients</h2>
